# envsmith

./: index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EnvRow.tsx  FileListItem.tsx  ProjectExplorer.tsx  Toast.tsx  VaultEditor.tsx
